package mx.uaemex.fi.dto;

public record EmpleadoResponse(Integer id, String rfc, String nombre, String apellidos, String correo) {
}
